logs/exceptions.log
{ time: [34m08-08-2022 08:03:34[39m level: [31merror[39m message: uncaughtException: Unexpected token '.'
/Users/Apple/Desktop/project/social_app/server/controllers/post.controller.js:48
      end: posts?.includes(allValue[allValue.length - 1]) ? true : false,
                 ^

SyntaxError: Unexpected token '.'
    at compileFunction (<anonymous>)
    at wrapSafe (internal/modules/cjs/loader.js:915:16)
    at Module._compile (internal/modules/cjs/loader.js:963:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1027:10)
    at Module.load (internal/modules/cjs/loader.js:863:32)
    at Function.Module._load (internal/modules/cjs/loader.js:708:14)
    at Module.require (internal/modules/cjs/loader.js:887:19)
    at require (internal/modules/cjs/helpers.js:74:18)
    at Object.<anonymous> (/Users/Apple/Desktop/project/social_app/server/routes/post.route.js:2:18)
    at Module._compile (internal/modules/cjs/loader.js:999:30) stack: /Users/Apple/Desktop/project/social_app/server/controllers/post.controller.js:48
      end: posts?.includes(allValue[allValue.length - 1]) ? true : false,
                 ^

SyntaxError: Unexpected token '.'
    at compileFunction (<anonymous>)
    at wrapSafe (internal/modules/cjs/loader.js:915:16)
    at Module._compile (internal/modules/cjs/loader.js:963:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1027:10)
    at Module.load (internal/modules/cjs/loader.js:863:32)
    at Function.Module._load (internal/modules/cjs/loader.js:708:14)
    at Module.require (internal/modules/cjs/loader.js:887:19)
    at require (internal/modules/cjs/helpers.js:74:18)
    at Object.<anonymous> (/Users/Apple/Desktop/project/social_app/server/routes/post.route.js:2:18)
    at Module._compile (internal/modules/cjs/loader.js:999:30) }
{ time: [34m08-08-2022 08:06:03[39m level: [31merror[39m message: uncaughtException: Unexpected token '.'
/Users/Apple/Desktop/project/social_app/server/controllers/post.controller.js:126
  const status = query?.status;
                       ^

SyntaxError: Unexpected token '.'
    at wrapSafe (internal/modules/cjs/loader.js:915:16)
    at Module._compile (internal/modules/cjs/loader.js:963:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1027:10)
    at Module.load (internal/modules/cjs/loader.js:863:32)
    at Function.Module._load (internal/modules/cjs/loader.js:708:14)
    at Module.require (internal/modules/cjs/loader.js:887:19)
    at require (internal/modules/cjs/helpers.js:74:18)
    at Object.<anonymous> (/Users/Apple/Desktop/project/social_app/server/routes/post.route.js:2:18)
    at Module._compile (internal/modules/cjs/loader.js:999:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1027:10) stack: /Users/Apple/Desktop/project/social_app/server/controllers/post.controller.js:126
  const status = query?.status;
                       ^

SyntaxError: Unexpected token '.'
    at wrapSafe (internal/modules/cjs/loader.js:915:16)
    at Module._compile (internal/modules/cjs/loader.js:963:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1027:10)
    at Module.load (internal/modules/cjs/loader.js:863:32)
    at Function.Module._load (internal/modules/cjs/loader.js:708:14)
    at Module.require (internal/modules/cjs/loader.js:887:19)
    at require (internal/modules/cjs/helpers.js:74:18)
    at Object.<anonymous> (/Users/Apple/Desktop/project/social_app/server/routes/post.route.js:2:18)
    at Module._compile (internal/modules/cjs/loader.js:999:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1027:10) }
{ time: [34m08-08-2022 08:07:01[39m level: [31merror[39m message: uncaughtException: Cannot find module '../models/todo.model'
Require stack:
- /Users/Apple/Desktop/project/social_app/server/controllers/post.controller.js
- /Users/Apple/Desktop/project/social_app/server/routes/post.route.js
- /Users/Apple/Desktop/project/social_app/server/util/middleware&route.js
- /Users/Apple/Desktop/project/social_app/server/index.js
Error: Cannot find module '../models/todo.model'
Require stack:
- /Users/Apple/Desktop/project/social_app/server/controllers/post.controller.js
- /Users/Apple/Desktop/project/social_app/server/routes/post.route.js
- /Users/Apple/Desktop/project/social_app/server/util/middleware&route.js
- /Users/Apple/Desktop/project/social_app/server/index.js
    at Function.Module._resolveFilename (internal/modules/cjs/loader.js:815:15)
    at Function.Module._load (internal/modules/cjs/loader.js:667:27)
    at Module.require (internal/modules/cjs/loader.js:887:19)
    at require (internal/modules/cjs/helpers.js:74:18)
    at Object.<anonymous> (/Users/Apple/Desktop/project/social_app/server/controllers/post.controller.js:3:14)
    at Module._compile (internal/modules/cjs/loader.js:999:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1027:10)
    at Module.load (internal/modules/cjs/loader.js:863:32)
    at Function.Module._load (internal/modules/cjs/loader.js:708:14)
    at Module.require (internal/modules/cjs/loader.js:887:19) stack: Error: Cannot find module '../models/todo.model'
Require stack:
- /Users/Apple/Desktop/project/social_app/server/controllers/post.controller.js
- /Users/Apple/Desktop/project/social_app/server/routes/post.route.js
- /Users/Apple/Desktop/project/social_app/server/util/middleware&route.js
- /Users/Apple/Desktop/project/social_app/server/index.js
    at Function.Module._resolveFilename (internal/modules/cjs/loader.js:815:15)
    at Function.Module._load (internal/modules/cjs/loader.js:667:27)
    at Module.require (internal/modules/cjs/loader.js:887:19)
    at require (internal/modules/cjs/helpers.js:74:18)
    at Object.<anonymous> (/Users/Apple/Desktop/project/social_app/server/controllers/post.controller.js:3:14)
    at Module._compile (internal/modules/cjs/loader.js:999:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1027:10)
    at Module.load (internal/modules/cjs/loader.js:863:32)
    at Function.Module._load (internal/modules/cjs/loader.js:708:14)
    at Module.require (internal/modules/cjs/loader.js:887:19) }
{ time: [34m08-08-2022 08:07:42[39m level: [31merror[39m message: uncaughtException: Cannot find module '../models/todo.model'
Require stack:
- /Users/Apple/Desktop/project/social_app/server/controllers/post.controller.js
- /Users/Apple/Desktop/project/social_app/server/routes/post.route.js
- /Users/Apple/Desktop/project/social_app/server/util/middleware&route.js
- /Users/Apple/Desktop/project/social_app/server/index.js
Error: Cannot find module '../models/todo.model'
Require stack:
- /Users/Apple/Desktop/project/social_app/server/controllers/post.controller.js
- /Users/Apple/Desktop/project/social_app/server/routes/post.route.js
- /Users/Apple/Desktop/project/social_app/server/util/middleware&route.js
- /Users/Apple/Desktop/project/social_app/server/index.js
    at Function.Module._resolveFilename (internal/modules/cjs/loader.js:815:15)
    at Function.Module._load (internal/modules/cjs/loader.js:667:27)
    at Module.require (internal/modules/cjs/loader.js:887:19)
    at require (internal/modules/cjs/helpers.js:74:18)
    at Object.<anonymous> (/Users/Apple/Desktop/project/social_app/server/controllers/post.controller.js:3:14)
    at Module._compile (internal/modules/cjs/loader.js:999:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1027:10)
    at Module.load (internal/modules/cjs/loader.js:863:32)
    at Function.Module._load (internal/modules/cjs/loader.js:708:14)
    at Module.require (internal/modules/cjs/loader.js:887:19) stack: Error: Cannot find module '../models/todo.model'
Require stack:
- /Users/Apple/Desktop/project/social_app/server/controllers/post.controller.js
- /Users/Apple/Desktop/project/social_app/server/routes/post.route.js
- /Users/Apple/Desktop/project/social_app/server/util/middleware&route.js
- /Users/Apple/Desktop/project/social_app/server/index.js
    at Function.Module._resolveFilename (internal/modules/cjs/loader.js:815:15)
    at Function.Module._load (internal/modules/cjs/loader.js:667:27)
    at Module.require (internal/modules/cjs/loader.js:887:19)
    at require (internal/modules/cjs/helpers.js:74:18)
    at Object.<anonymous> (/Users/Apple/Desktop/project/social_app/server/controllers/post.controller.js:3:14)
    at Module._compile (internal/modules/cjs/loader.js:999:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1027:10)
    at Module.load (internal/modules/cjs/loader.js:863:32)
    at Function.Module._load (internal/modules/cjs/loader.js:708:14)
    at Module.require (internal/modules/cjs/loader.js:887:19) }
